<resources>
    <string name="app_name">TMDB Manager</string>
    <string name="search_title">Search</string>
    <string name="strErrorMovies">Error searching movies</string>
    <string name="MOVIERESULT_KEY">movieresult</string>
    <string name="movieImage">Image of the movie</string>
    <string name="overview">Overview</string>
    <string name="popularity">Popularity</string>
    <string name="popularityDots">Popularity:&#160;</string>
    <string name="searchPersons">Search persons</string>
    <string name="PERSONRESULT_KEY">personresult</string>
    <string name="searchMovies">Search movies</string>
    <string name="knownFor">Known for the following films</string>
    <string name="personImage">Image of the person</string>
    <string name="casting">Casting</string>
    <string name="birthdayDots">Birthday:&#160;</string>
    <string name="deathdayDots">Death day:&#160;</string>
    <string name="name">Name</string>
    <string name="character">Character</string>
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="releaseDate">Release date</string>
    <string name="mainCrew">Main crew</string>
    <string name="writingDots">Writing:&#160;</string>
    <string name="directingDots">Directing:&#160;</string>
    <string name="personSaved">Person saved to the database</string>
    <string name="placeOfBirthDots">Place of birth:&#160;</string>
    <string name="personDeleted">Person deleted from the database</string>
    <string name="releaseDateDots">Release date:&#160;</string>
    <string name="refresh">Refresh</string>
    <string name="mostPopularMovies">Most popular movies</string>
    <string name="searchResults">Search results</string>
    <string name="noMovies">There are no movies with this title</string>
    <string name="TMDBLogo">The Movie Database Logo</string>
    <string name="mostPopularMovie">Most popular movie</string>
    <string name="latestMovie">Last movie</string>
    <string name="latest_movie_image">Latest movie image</string>
    <string name="most_popular_movie_image_description">Most popular movie image</string>
    <string name="voteMovie">Vote movie</string>
    <string name="multipleRating">The rating has to be multiple of 0.5</string>
    <string name="thisYearsmostRatedMovie">This year\'s most rated movie</string>
    <string name="mostRatedMovie">Most rated movie</string>
    <string name="lastYearMostPopularMovie">Last year\'s most popular movie</string>
    <string name="movies">Movies</string>
    <string name="persons">Persons</string>
    <string name="deletePerson">Delete person</string>
    <string name="txtDeletePersonQuestion">Are you sure you want to delete this person from the database?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteMovie">Delete movie</string>
    <string name="txtDeleteMovieQuestion">Are you sure you want to delete this person from the database?</string>
    <string name="movieDeleted">Movie deleted from the database</string>
    <string name="movieSaved">Movie saved in the database</string>
    <string name="strErrorConfig">Error getting the configuration</string>
    <string name="txtSearchPersonsInfo"><![CDATA[By using the search box, you can find any professionals who work as a member of the <b>cast</b> or <b>crew</b> of any kind of movies]]></string>
    <string name="txtSearchMoviesInfo">Search a movie by name</string>
    <string name="rate">Rate</string>
    <string name="FILTER_KEY">filter</string>
    <string name="strErrorSearchCast">Error searching the cast of the movie</string>
    <string name="strErrorPerson">Error searching the person</string>
    <string name="strErrorSession">Error getting the session</string>
    <string name="strErrorRating">Error rating the movie</string>
    <string name="strErrorPersons">Error searching persons</string>
    <string name="strErrorMovie">Error searching movie</string>
    <string name="searchPersonHint">Search a person by name</string>
    <string name="noValidRating">The rating value has to be between 0.0 and 10.0</string>
</resources>
